infra/sqc-kubernates-config/sqc_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqc-ingress
spec:
  rules:
  - host: www.sqc.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sqc-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqc-frontend-service
            port:
              number: 80
